@@ -1,3 +1,10 @@
+2008-05-26  Vincent Untz  <vuntz@gnome.org>
+
+	* Makefile.am:
+	* gnome-clock-applet-mechanism.policy.in: rename to...
+	* org.gnome.clockapplet.mechanism.policy.in: this, and add <vendor>,
+	<vendor_url>, <icon>
+
 2008-05-13  Vincent Untz  <vuntz@gnome.org>
 
 	* clock.c: (run_prefs_locations_add), (edit_tree_row): put the focus in
